adjust conteiner width

--- a/style.css
+++ b/style.css
@@ -37,7 +37,8 @@ body * {
   --switch-bg-url: url(./assets/assets/sun.svg);
 }
 #conteiner {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
