--- a/style.css
+++ b/style.css
@@ -76,10 +76,14 @@ body * {
   left: 0;
   transform: translateY(-50%);
   z-index: 1;
+  animation: slide-back 0.2s;
+}
+#switch button:hover{
+  outline: 8px solid var(--highlight-color);
 }
 .light #switch button{
-  right: 0;
-  left: initial;
+ animation: slide-in 0.2s  forwards /*precisa de dois valore animation: (nome da animação) e tempo*/
+ /*forwards serve para dizer ao CSS voltar a animção para o seu local de origem*/
 }
 
 #switch span{
@@ -152,5 +156,22 @@ footer {
 
   .light{
     --bg-url: url(./assets/assets/bg-desktop-light.jpg);
+  }
+}
+/*animção*/
+@keyframes slide-in {/*at-rule de animação*/
+  from{
+    left: 0;
+  }
+  to{
+    left: 50%;
+  }
+}
+@keyframes slide-back{
+  from{
+    left: 50%;
+  }
+  to{
+    left: 0;
   }
 }
